--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,13 @@
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/pmt_new?serverTimezone=GMT%2B8
-    username: root
-    password: ""
-    driver-class-name: com.mysql.jdbc.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
+
+  profiles:
+    active: local
 
   redis:
     host: 127.0.0.1
